HDFFV-11310 - VL read/write function for primitive types