@@ -19,8 +19,8 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import hdf.hdf5lib.H5;
@@ -252,7 +252,7 @@ public class TestH5A {
             // Opening the existing attribute, obj_name(Created by H5ACreate2)
             // by index, attached to an object identifier.
             attribute_id = H5.H5Aopen_by_idx(H5did, ".", HDF5Constants.H5_INDEX_CRT_ORDER,
-                           HDF5Constants.H5_ITER_INC, 0, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                             HDF5Constants.H5_ITER_INC, 0, HDF5Constants.H5P_DEFAULT, lapl_id);
 
             assertTrue("testH5Aopen_by_idx: H5Aopen_by_idx", attribute_id >= 0);
 
@@ -315,7 +315,8 @@ public class TestH5A {
 
         try {
             attribute_id = H5.H5Acreate_by_name(H5fid, obj_name, attr_name, type_id, space_id,
-                                HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                                HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT,
+                                                lapl_id);
             assertTrue("testH5Acreate_by_name: H5Acreate_by_name", attribute_id >= 0);
 
             // Check if the name of attribute attached to the object specified
@@ -393,7 +394,7 @@ public class TestH5A {
 
         try {
             attr_id = H5.H5Acreate_by_name(loc_id, obj_name, old_attr_name, type_id, space_id,
-                                     HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                           HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
 
             ret_val = H5.H5Arename_by_name(loc_id, obj_name, old_attr_name, new_attr_name, lapl_id);
 
@@ -434,7 +435,8 @@ public class TestH5A {
 
         try {
             attribute_id = H5.H5Acreate_by_name(H5fid, obj_name, attr_name, type_id, space_id,
-                                     HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                                HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT,
+                                                lapl_id);
             assertTrue("testH5Aget_name: H5Acreate_by_name ", attribute_id > 0);
             ret_name = H5.H5Aget_name(attribute_id);
             assertEquals(ret_name, attr_name);
@@ -538,7 +540,7 @@ public class TestH5A {
 
         try {
             attr_id      = H5.H5Acreate(H5did, "dset", type_id, space_id, HDF5Constants.H5P_DEFAULT,
-                                        HDF5Constants.H5P_DEFAULT);
+                                   HDF5Constants.H5P_DEFAULT);
             attribute_id = H5.H5Aopen(H5did, "dset", HDF5Constants.H5P_DEFAULT);
             // Calling H5Aget_info with attribute_id returned from H5Aopen.
             attr_info = H5.H5Aget_info(attribute_id);
@@ -579,7 +581,7 @@ public class TestH5A {
 
         try {
             attr_id      = H5.H5Acreate(H5did, ".", type_id, space_id, HDF5Constants.H5P_DEFAULT,
-                                        HDF5Constants.H5P_DEFAULT);
+                                   HDF5Constants.H5P_DEFAULT);
             attribute_id = H5.H5Aopen_by_idx(H5did, ".", HDF5Constants.H5_INDEX_CRT_ORDER, order, 0,
                                              HDF5Constants.H5P_DEFAULT, lapl_id);
             // Calling H5Aget_info with attribute_id returned from
@@ -622,7 +624,7 @@ public class TestH5A {
 
         try {
             attr_id  = H5.H5Acreate(H5did, "dset1", type_id, space_id, HDF5Constants.H5P_DEFAULT,
-                                    HDF5Constants.H5P_DEFAULT);
+                                   HDF5Constants.H5P_DEFAULT);
             attr2_id = H5.H5Acreate(H5did, "dataset2", type_id, space_id, HDF5Constants.H5P_DEFAULT,
                                     HDF5Constants.H5P_DEFAULT);
 
@@ -699,7 +701,7 @@ public class TestH5A {
 
         try {
             attr_id   = H5.H5Acreate_by_name(H5fid, obj_name, attr_name, type_id, space_id,
-                                             HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                           HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr_info = H5.H5Aget_info_by_name(H5fid, obj_name, attr_name, lapl_id);
             assertNotNull(attr_info);
         }
@@ -1212,13 +1214,13 @@ public class TestH5A {
         }
         try {
             attr1_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute1", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr2_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute2", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr3_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute3", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr4_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute4", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             H5A_iterate_cb iter_cb = new H5A_iter_callback();
             try {
                 H5.H5Aiterate(H5fid, HDF5Constants.H5_INDEX_CRT_ORDER, HDF5Constants.H5_ITER_INC, 0L, iter_cb,
@@ -1305,13 +1307,13 @@ public class TestH5A {
         }
         try {
             attr1_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute4", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr2_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute3", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr3_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute2", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             attr4_id               = H5.H5Acreate_by_name(H5fid, ".", "attribute1", type_id, space_id,
-                                                          HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
+                                            HDF5Constants.H5P_DEFAULT, HDF5Constants.H5P_DEFAULT, lapl_id);
             H5A_iterate_cb iter_cb = new H5A_iter_callback();
             try {
                 H5.H5Aiterate_by_name(H5fid, ".", HDF5Constants.H5_INDEX_NAME, HDF5Constants.H5_ITER_INC, 0L,
@@ -1363,24 +1365,24 @@ public class TestH5A {
     @Test
     public void testH5AVLwr()
     {
-        String attr_int_name  = "VLIntdata";
-        String attr_dbl_name  = "VLDbldata";
-        long attr_int_id      = HDF5Constants.H5I_INVALID_HID;
-        long attr_dbl_id      = HDF5Constants.H5I_INVALID_HID;
-        long atype_int_id = HDF5Constants.H5I_INVALID_HID;
-        long atype_dbl_id = HDF5Constants.H5I_INVALID_HID;
-        long aspace_id    = HDF5Constants.H5I_INVALID_HID;
-        long[] dims       = {4};
-        long lsize        = 1;
+        String attr_int_name = "VLIntdata";
+        String attr_dbl_name = "VLDbldata";
+        long attr_int_id     = HDF5Constants.H5I_INVALID_HID;
+        long attr_dbl_id     = HDF5Constants.H5I_INVALID_HID;
+        long atype_int_id    = HDF5Constants.H5I_INVALID_HID;
+        long atype_dbl_id    = HDF5Constants.H5I_INVALID_HID;
+        long aspace_id       = HDF5Constants.H5I_INVALID_HID;
+        long[] dims          = {4};
+        long lsize           = 1;
 
         ArrayList[] vl_int_data = new ArrayList[4];
         ArrayList[] vl_dbl_data = new ArrayList[4];
         try {
             // Write Integer data
-            vl_int_data[0] = new ArrayList<Integer>(List.of(1));
-            vl_int_data[1] = new ArrayList<Integer>(List.of(2,3));
-            vl_int_data[2] = new ArrayList<Integer>(List.of(4,5,6));
-            vl_int_data[3] = new ArrayList<Integer>(List.of(7,8,9,10));
+            vl_int_data[0]  = new ArrayList<Integer>(Arrays.asList(1));
+            vl_int_data[1]  = new ArrayList<Integer>(Arrays.asList(2, 3));
+            vl_int_data[2]  = new ArrayList<Integer>(Arrays.asList(4, 5, 6));
+            vl_int_data[3]  = new ArrayList<Integer>(Arrays.asList(7, 8, 9, 10));
             Class dataClass = vl_int_data.getClass();
             assertTrue("testH5AVLwr.getClass: " + dataClass, dataClass.isArray());
 
@@ -1434,11 +1436,11 @@ public class TestH5A {
             }
 
             // Write Double data
-            vl_dbl_data[0] = new ArrayList<Double>(List.of(1.1));
-            vl_dbl_data[1] = new ArrayList<Double>(List.of(2.2,3.3));
-            vl_dbl_data[2] = new ArrayList<Double>(List.of(4.4,5.5,6.6));
-            vl_dbl_data[3] = new ArrayList<Double>(List.of(7.7,8.8,9.9,10.0));
-            dataClass = vl_dbl_data.getClass();
+            vl_dbl_data[0] = new ArrayList<Double>(Arrays.asList(1.1));
+            vl_dbl_data[1] = new ArrayList<Double>(Arrays.asList(2.2, 3.3));
+            vl_dbl_data[2] = new ArrayList<Double>(Arrays.asList(4.4, 5.5, 6.6));
+            vl_dbl_data[3] = new ArrayList<Double>(Arrays.asList(7.7, 8.8, 9.9, 10.0));
+            dataClass      = vl_dbl_data.getClass();
             assertTrue("testH5AVLwr.getClass: " + dataClass, dataClass.isArray());
 
             try {
@@ -1507,10 +1509,14 @@ public class TestH5A {
             catch (Exception ex) {
                 ex.printStackTrace();
             }
-            assertTrue("testH5AVLwr:"+vl_readbuf[0].get(0), vl_int_data[0].get(0).equals(vl_readbuf[0].get(0)));
-            assertTrue("testH5AVLwr:"+vl_readbuf[1].get(0), vl_int_data[1].get(0).equals(vl_readbuf[1].get(0)));
-            assertTrue("testH5AVLwr:"+vl_readbuf[2].get(0), vl_int_data[2].get(0).equals(vl_readbuf[2].get(0)));
-            assertTrue("testH5AVLwr:"+vl_readbuf[3].get(0), vl_int_data[3].get(0).equals(vl_readbuf[3].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[0].get(0),
+                       vl_int_data[0].get(0).equals(vl_readbuf[0].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[1].get(0),
+                       vl_int_data[1].get(0).equals(vl_readbuf[1].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[2].get(0),
+                       vl_int_data[2].get(0).equals(vl_readbuf[2].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[3].get(0),
+                       vl_int_data[3].get(0).equals(vl_readbuf[3].get(0)));
 
             // Read Double data
             vl_readbuf = new ArrayList[4];
@@ -1523,10 +1529,14 @@ public class TestH5A {
             catch (Exception ex) {
                 ex.printStackTrace();
             }
-            assertTrue("testH5AVLwr:"+vl_readbuf[0].get(0), vl_dbl_data[0].get(0).equals(vl_readbuf[0].get(0)));
-            assertTrue("testH5AVLwr:"+vl_readbuf[1].get(0), vl_dbl_data[1].get(0).equals(vl_readbuf[1].get(0)));
-            assertTrue("testH5AVLwr:"+vl_readbuf[2].get(0), vl_dbl_data[2].get(0).equals(vl_readbuf[2].get(0)));
-            assertTrue("testH5AVLwr:"+vl_readbuf[3].get(0), vl_dbl_data[3].get(0).equals(vl_readbuf[3].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[0].get(0),
+                       vl_dbl_data[0].get(0).equals(vl_readbuf[0].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[1].get(0),
+                       vl_dbl_data[1].get(0).equals(vl_readbuf[1].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[2].get(0),
+                       vl_dbl_data[2].get(0).equals(vl_readbuf[2].get(0)));
+            assertTrue("testH5AVLwr:" + vl_readbuf[3].get(0),
+                       vl_dbl_data[3].get(0).equals(vl_readbuf[3].get(0)));
         }
         catch (Throwable err) {
             err.printStackTrace();
